Java 8 compatibility update